# gtm-mcp

./: README.md  pyproject.toml  requirements.txt
.github/workflows/: python-publish.yml  release..yml  release.yml
src/gtm-mcp/: gtm_client.py  server.py  setup.py
src/gtm_mcp/: setup.py  tools.py
